  This may be enabled by defining the BOOST_WAVE_SUPPORT_PRAGMA_MESSAGE pp
  constant to some value different from zero.
- Fixed a couple of typos in the file cpp.cpp preventing it to compile on 
  gcc 4.1.0 (thanks to Richard Guenther for reporting these).
- Richard Guenther fixed another buffer overrun problem in the Re2C scanner.
- Fixed Jamfile.v2 files for all sample applications.
  
Sat Feb 18 2005
- Version 1.2.3
- Added a missing throw() specification to the function 
  cpp_exception::get_related_name().
- Fix Boost bug ([ boost-Bugs-1395857 ] wave redefines BSIZE).
- Added missing calls to the skipped_token() preprocessing hook which wasn't
  called for pp directives inside disabled #if blocks.
- Made the context<> type noncopyable.
- Introduced the --extended/-x command line option to the wave driver 
  executable, which enables the #pragma wave system() directive. This directive
  is now disabled by default because it may cause a potential security threat.
- Changed the what() function of the macro_handling_exception class, which now
  correctly returns the name of the exception type itself.
- Added a diagnostic message to the wave driver executable, which is issued 
  whenever a #pragma wave system() directive is found, but the -x (--extended) 
  command line argument was not given.
- Fixed long integer suffix to be allowed to be mixed case (1Ll or 2lL).
- Fixed the BOOST_PP_CAT(1e, -1) pp-token bug. Wave now correctly recognizes
  pp-number tokens, which are converted to C++ tokens right before they are 
  returned from the library.
- Moved the implementation of the token_id query functions (get_token_name(), 
  get_token_value()) to a separate source file.
- Fixed a bug, which prevented to prefer pp-numbers in files preprocessed as
  a result of #include directives.
- Fixed a bug, which prevented to open #include'd files specified by an 
  absolute path.
- Fixed a problem in the expression parser value type.